# lbr

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  about.hbs  about.toml  diesel.toml  example.env  fly.toml  justfile  rustfmt.toml  taplo.toml
about/: docker.hbs  dockerhub.hbs  web.hbs
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs  request.rs  response.rs
crates/backend/: Cargo.toml  README.md
crates/backend/migrations/0001_kanji/: down.sql  up.sql
crates/backend/migrations/0002_words/: down.sql  up.sql
crates/backend/migrations/0004_sources/: up.sql
crates/backend/migrations/0005_sentences/: down.sql  up.sql
crates/backend/migrations/0006_decks/: down.sql  up.sql
crates/backend/migrations/0007_ignored_words/: down.sql
crates/backend/src/: authentication.rs  domain.rs  handlers.rs  lib.rs  main.rs  prelude.rs  schema.rs
crates/backend/src/domain/: decks.rs  ichiran.rs  japanese.rs  sentences.rs
crates/backend/src/handlers/: auth.rs  decks.rs  prelude.rs  segment.rs  sentences.rs  sources.rs  words.rs
crates/backend/src/utils/: database.rs  diesel.rs
crates/core/: README.md
crates/core/src/: ichiran_types.rs
crates/frontend/: Cargo.toml  README.md  index.html
crates/frontend/src/: components.rs  context.rs  error.rs  lib.rs  main.rs
crates/frontend/src/components/: analysis.rs
crates/jadata/: .gitignore  Cargo.toml  README.md
crates/jadata/data/: kanji_extra.json  kanji_names.json  kanji_replacements.json  kanji_similar.json
crates/jadata/included/: kanjifile_manual.json  kanjifile_names.json  kanjifile_similar.json
crates/jadata/src/: cli.rs  input.rs  jmdict.rs  jmdict_furigana.rs  kanji_extra.rs  kanji_names.rs  kanji_similar.rs  kanjidic.rs  kradfile.rs  lib.rs  main.rs  output.rs  similar_kanji.rs
crates/jadata/src/input/: jmdict.rs  jmdict_furigana.rs  kanjidic2.rs  kanjifile_manual.rs  kanjifile_names.rs  kanjifiles_similar.rs  kradfile.rs
crates/jadata/src/output/: kanjifile.rs  wordfile.rs
crates/lbr/: Cargo.toml  README.md
crates/lbr/src/: anki.rs  core.rs  lib.rs  sentence_splitter.rs
crates/lbr/src/anki/: kanji.rs  word.rs
crates/lbr_api/: README.md
crates/lbr_api/src/: lib.rs  response.rs
crates/lbr_core/: Cargo.toml
crates/lbr_core/src/: ichiran_types.rs  lib.rs
crates/lbr_frontend/: Cargo.toml
crates/lbr_frontend/src/: lib.rs
crates/lbr_server/: Cargo.toml
crates/lbr_server/migrations/0001_kanji/: up.sql
crates/lbr_server/migrations/0002_words/: down.sql  up.sql
crates/lbr_server/migrations/0003_users/: up.sql
crates/lbr_server/migrations/0004_sources/: down.sql
crates/lbr_server/migrations/0006_decks/: up.sql
crates/lbr_server/migrations/0007_ignored_words/: up.sql
crates/lbr_server/src/: authentication.rs  domain.rs  error.rs  lib.rs  main.rs  queries.rs  schema.rs  schema_ichiran.rs  utils.rs
crates/lbr_server/src/domain/: decks.rs  ichiran.rs  japanese.rs  sentences.rs  words.rs
crates/lbr_server/src/handlers/: auth.rs  decks.rs  prelude.rs  segment.rs  sentences.rs  sources.rs  words.rs
crates/lbr_server/src/utils/: database.rs  diesel.rs
crates/lbr_web/: Cargo.toml
crates/lbr_web/src/: components.rs  lib.rs  pages.rs  utils.rs
crates/lbr_web/src/components/: analysis.rs
crates/lbr_web/src/context/: client.rs
crates/web/: Cargo.toml  README.md
crates/web/src/: components.rs  context.rs  error.rs  lib.rs  pages.rs  utils.rs
crates/web/src/components/: analysis.rs
crates/web/src/context/: client.rs  session.rs
design/: anki.md  db.md  roadmap.md
favicon/: README.md
scripts/: backup.nu  common.nu  dev.bash  docker-build.nu  docker-push.nu  docker-run.nu  downloads.nu  dump-ichiran-db.bash  dump-lbr-db.bash  generate-env.nu  generate-ichiran-schema.bash  generate-ichiran-schema.nu  generate-license-html.bash  generate-license.nu  init-ichiran-db.bash  init-lbr-db.bash  initialise-repository.nu  jadata.bash  kanji-sort.nu  maintain.nu  prepare-ichiran-cli.nu  prepare-ichiran-db.nu  prepare-ichiran-seq-to-word-id.nu  prepare-lbr-db-user.nu  prepare-lbr-db.nu  restore.nu  watch.nu
style/: README.md
