[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Heliozoa/lbr"
rust-version = "1.56"
version = "0.1.0"

[workspace.dependencies]
jadata = { git = "https://github.com/Heliozoa/jadata" }
lbr = { path = "./crates/lbr" }
lbr_api = { path = "./crates/api" }
lbr_core = { path = "./crates/core" }
lbr_frontend = { path = "./crates/frontend" }
lbr_server = { path = "./crates/backend" }
lbr_web = { path = "./crates/web" }

leptos = "0.6.0-beta"
leptos_axum = "0.6.0-beta"
leptos_meta = "0.6.0-beta"
leptos_router = "0.6.0-beta"

[profile.dev.package]
serde.opt-level = 3
serde_json.opt-level = 3

# [patch.crates-io]
# ichiran = { path = "../ichiran" }

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'

[[workspace.metadata.leptos]]
bin-package = "lbr_server"
bin-target = "lbr_server"
lib-package = "lbr_frontend"
lib-profile-release = "wasm-release"
name = "lbr"
style-file = "style/bulma.css"
