[workspace]
members = ["./crates/*", "crates/jadata"]
resolver = "2"

[workspace.package]
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Heliozoa/lbr"
rust-version = "1.63"
version = "0.1.0"

[workspace.dependencies]
jadata = { path = "./crates/jadata" }
lbr = { path = "./crates/lbr" }
lbr_api = { path = "./crates/lbr_api" }
lbr_core = { path = "./crates/lbr_core" }
lbr_frontend = { path = "./crates/lbr_frontend" }
lbr_server = { path = "./lbr_server" }
lbr_web = { path = "./crates/lbr_web" }

leptos = "0.7.0-beta5"
leptos_axum = "0.7.0-beta5"
leptos_meta = "0.7.0-beta5"
leptos_router = "0.7.0-beta5"

[profile.dev.package]
serde.opt-level = 3
serde_json.opt-level = 3

# [patch.crates-io]
# ichiran = { path = "../ichiran" }

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'

[[workspace.metadata.leptos]]
bin-package = "lbr_server"
bin-target = "lbr_server"
lib-package = "lbr_frontend"
lib-profile-release = "wasm-release"
name = "lbr"
style-file = "style/bulma.css"
