[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Heliozoa/lbr"
rust-version = "1.63"
version = "0.1.0"

[workspace.dependencies]
jadata = { path = "./crates/jadata" }
lbr = { path = "./crates/lbr" }
lbr_api = { path = "./crates/lbr_api" }
lbr_core = { path = "./crates/lbr_core" }
lbr_frontend = { path = "./crates/lbr_frontend" }
lbr_server = { path = "./crates/lbr_server" }
lbr_web = { path = "./crates/lbr_web" }

leptos = "0.7.2"
leptos_axum = "0.7.2"
leptos_meta = "0.7.2"
leptos_router = "0.7.2"

# [patch.crates-io]
# ichiran = { path = "../ichiran-rs" }
# furigana = { path = "../furigana" }


[profile.dev.package]
furigana.opt-level = 3
genanki-rs.opt-level = 3
ichiran.opt-level = 3
serde.opt-level = 3
serde_json.opt-level = 3

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'

[[workspace.metadata.leptos]]
bin-package = "lbr_server"
bin-target = "lbr_server"
lib-package = "lbr_frontend"
lib-profile-release = "wasm-release"
name = "lbr"
style-file = "style/bulma.css"
