[package]
name = "lbr_server"
description = "A web backend for LBR, a project for learning Japanese."
readme = "README.md"
keywords = []
categories = []
default-run = "lbr_server"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jadata.workspace = true
lbr.workspace = true
lbr_core.workspace = true
lbr_api.workspace = true

argon2 = "0.5.0"
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
eyre = "0.6.8"
furigana = "0.1.1"
tokio-util = { version = "0.7.8", features = ["io"] }
ichiran = "0.4.0"
itertools = "0.10.5"
moka = { version = "0.11.2", features = ["future"] }
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.97"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-cookies = { version = "0.9.0", features = ["signed"] }
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wana_kana = "3.0.0"
