[package]
name = "lbr_server"
description = "A web backend for LBR, a project for learning Japanese."
readme = "README.md"
keywords = []
categories = []
default-run = "lbr_server"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lbr_web = { workspace = true, features = ["ssr"] }

axum = "0.6.18"
dotenvy = "0.15.7"
eyre = "0.6.8"
itertools = "0.11.0"
leptos = { version = "0.4.2", features = ["nightly", "ssr"] }
leptos_axum = "0.4.2"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.1", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower = "0.4.13"
