# cargo-features = ["per-package-target"]

[package]
name = "lbr-web"
description = "Web frontend for lbr-server."
readme = "README.md"
keywords = []
categories = []
# default-target = "wasm32-unknown-unknown"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lbr_api.workspace = true

chrono = "0.4.26"
console_error_panic_hook = "0.1.7"
eyre = "0.6.8"
leptos = { version = "0.4.1", features = ["nightly", "csr"] }
leptos_router = { version = "0.4.1", features=["nightly", "csr"] }
reqwasm = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }
