[package]
name = "lbr_frontend"
description = "Web frontend for lbr-server."
readme = "README.md"
keywords = []
categories = []

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lbr_web = { workspace = true, features = ["hydrate"] }

console_error_panic_hook = "0.1.7"
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "main", features = ["nightly", "hydrate"] }
reqwasm = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }
