[package]
name = "jadata"
description = "Generates the wordfile.json and kanjifile.json files for the LBR project."
readme = "README.md"
keywords = []
categories = []

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
encoding_rs = "0.8.31"
eyre = "0.6.8"
serde = { version = "1.0.149", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.89"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wana_kana = "3.0.0"
