[package]
name = "lbr"
description = "Provides the core functionality of LBR, a project for studying Japanese."
readme = "README.md"
keywords = []
categories = []

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lbr_core.workspace = true

furigana = "0.1.10"
genanki-rs = "0.4.0"
ichiran = "0.6.0"
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "2.0.9"
tracing = "0.1.37"
wana_kana = "4.0.0"
