[package]
name = "lbr"
description = "Provides the core functionality of LBR, a project for studying Japanese."
readme = "README.md"
keywords = []
categories = []

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lbr_core.workspace = true

furigana = "0.1.12"
ichiran = "0.6.0"
reanki = { version = "0.1.0", git = "https://github.com/Heliozoa/reanki.git", rev = "96dcde552d49554c88d7bdb0de1da796019d3502" }
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "2.0.9"
tracing = "0.1.37"
wana_kana = "4.0.0"

[dev-dependencies]
tracing-subscriber = "0.3.1"
