[package]
name = "lbr_frontend"
description = "Web frontend for lbr-server."
readme = "README.md"
keywords = []
categories = []

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lbr_web = { workspace = true, features = ["hydrate"] }

chrono = { version = "0.4.26", default-features = false, features = [
  "std",
  "clock",
  "wasmbind",
] }
console_error_panic_hook = "0.1.7"
eyre = "0.6.8"
leptos = { workspace = true, features = ["hydrate"] }
reqwasm = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "2.0.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.1"
tracing-web = "0.1.3"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }
