[package]
name = "lbr_server"
description = "A web backend for LBR, a project for learning Japanese."
readme = "README.md"
keywords = []
categories = []
default-run = "lbr_server"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
jadata.workspace = true
lbr.workspace = true
lbr_api.workspace = true
lbr_core.workspace = true
lbr_web = { workspace = true, features = ["ssr"] }

argon2 = "0.5.0"
axum = "0.7.2"
bitcode = "0.6.0"
chrono = { version = "0.4.26", default-features = false, features = [
  "std",
  "clock",
  "serde",
] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15.7"
eyre = "0.6.8"
furigana = "0.1.5"
ichiran = "0.4.0"
itertools = "0.14.0"
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
leptos_meta = { workspace = true, features = ["ssr"] }
moka = { version = "0.12.1", features = ["future"] }
rand = "0.8.5"
serde = "1.0.164"
serde-xml-rs = "0.6.0"
serde_json = "1.0.97"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower = { version = "0.5.1", features = ["util"] }
tower-cookies = { version = "0.10.0", features = ["signed"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wana_kana = "4.0.0"
