[package]
name = "lbr_web"
description = "Leptos app for lbr."
readme = "README.md"
keywords = []
categories = []

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "main", features = ["nightly"] }
leptos_router = { git = "https://github.com/leptos-rs/leptos.git", branch = "main", features = ["nightly"] }
reqwasm = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tracing = "0.1.37"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_router/ssr"]
