[package]
name = "lbr_web"
description = "Leptos app for lbr."
readme = "README.md"
keywords = []
categories = []

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
lbr_api.workspace = true

chrono = { version = "0.4.26", default-features = false, features = [
  "std",
  "clock",
] }
eyre = "0.6.8"
leptos = { workspace = true, features = [
  "nightly",
] }
leptos_meta = { workspace = true, features = [
  "nightly",
] }
leptos_router = { workspace = true, features = [
  "nightly",
] }
reqwasm = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
tracing = "0.1.37"
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.60", features = ["HtmlDocument"] }

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_router/hydrate", "leptos_meta/hydrate"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
